# hh_sj_parser_vacancies

./: main.py  pyproject.toml
config/: classes.py  functions.py
data/: vacancies.json
